--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/core": "7.16.0",
     "@babel/preset-env": "7.16.4",
     "@babel/preset-typescript": "7.16.0",
+    "@types/luxon": "2.3.0",
     "babel-jest": "27.3.1",
     "husky": "7.0.4",
     "jest": "27.3.1",
@@ -29,5 +30,8 @@
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
+  },
+  "dependencies": {
+    "luxon": "2.3.1"
   }
 }
